--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,9 @@
-altgraph @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/altgraph-0.17.2-py2.py3-none-any.whl
-appnope==0.1.4
-asttokens==2.4.1
-comm==0.2.2
-debugpy==1.8.1
-decorator==5.1.1
-exceptiongroup==1.2.1
-executing==2.0.1
-future @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/future-0.18.2-py3-none-any.whl
-importlib_metadata==7.1.0
-ipykernel==6.29.4
-ipython==8.18.1
-jedi==0.19.1
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-macholib @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/macholib-1.15.2-py2.py3-none-any.whl
-matplotlib-inline==0.1.7
-nest-asyncio==1.6.0
-numpy==2.0.2
-packaging==24.1
-pandas==2.2.3
-parso==0.8.4
-pexpect==4.9.0
-platformdirs==4.2.2
-prompt_toolkit==3.0.47
-psutil==5.9.8
-ptyprocess==0.7.0
-pure-eval==0.2.2
-Pygments==2.18.0
-python-dateutil==2.9.0.post0
-pytz==2024.2
-pyzmq==26.0.3
-six @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/six-1.15.0-py2.py3-none-any.whl
-stack-data==0.6.3
-tornado==6.4.1
-traitlets==5.14.3
-typing_extensions==4.12.2
-tzdata==2024.2
-wcwidth==0.2.13
-zipp==3.19.2
+streamlit
+pandas
+numpy
+plotly
+geopandas
+matplotlib
+wordcloud
+openpyxl
+
